created an angular app, created file serializers

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -1,12 +1,13 @@
 [[source]]
-name = "pypi"
-url = "https://pypi.org/simple"
+url = "https://pypi.python.org/simple"
 verify_ssl = true
-
-[dev-packages]
+name = "pypi"
 
 [packages]
 django = "*"
+djangorestframework = "*"
+
+[dev-packages]
 
 [requires]
-python_version = "2.7"
+python_version = "3.7"
