--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ django-heroku==0.3.1
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 gunicorn==20.0.4
+Pillow==7.0.0
 psycopg2==2.8.4
 PyJWT==1.7.1
+python-decouple==3.3
 pytz==2019.3
 sqlparse==0.3.1
 whitenoise==5.0.1
